--- a/food_and_resturant_project/index.html
+++ b/food_and_resturant_project/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food And Resturand Website</title>
+    <!-- vanila css -->
+    <link rel="stylesheet" href="assets/CSS/styel.css" />
 </head>
+
 <body>
-    
+    <!-- header-section start -->
+    <header>
+        <div class="container">
+            <div class="header">
+                <div class="header__logo">
+                    <a href="#">Foods</a>
+                </div>
+                <div class="header__menu">
+                    <a href="#">Home</a>
+                    <a href="">About</a>
+                    <a href="">Menu</a>
+                    <a href="">Service</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- header-section end -->
 </body>
+
 </html>
