banner section added

--- a/food_and_resturant_project/index.html
+++ b/food_and_resturant_project/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="header">
                 <div class="header__logo">
-                    <a href="#">Foods</a>
+                    <a class="default--color" href="#">Foods</a>
                 </div>
                 <div class="header__menu">
                     <a href="#">Home</a>
@@ -29,6 +29,21 @@
         </div>
     </header>
     <!-- header-section end -->
+    <!-- banner-section start -->
+    <div class="container">
+        <div class="banner">
+            <div class="banner__container">
+                <h1 class="default--color">Full Website</h1>
+                <p>foods the most precious things</p>
+                <button>Today's Menu</button>
+            </div>
+            <div class="banner__img">
+                <img src="assets/img/home.png" alt="">
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- banner-section end -->
 </body>
 
 </html>
