about us section added

--- a/food_and_resturant_project/index.html
+++ b/food_and_resturant_project/index.html
@@ -35,7 +35,7 @@
             <div class="banner__container">
                 <h1 class="default--color">Full Website</h1>
                 <p>foods the most precious things</p>
-                <button>Today's Menu</button>
+                <button class="website--btn">Today's Menu</button>
             </div>
             <div class="banner__img">
                 <img src="assets/img/home.png" alt="">
@@ -44,6 +44,21 @@
         </div>
     </div>
     <!-- banner-section end -->
+    <!-- about-us section start -->
+    <div class="container">
+        <div class="about">
+            <div class="about__img">
+                <img src="assets/img/about.png" alt="">
+            </div>
+            <div class="about__container website--title">
+                <h4>About US</h4>
+                <h1>We Speak the good food language</h1>
+                <p>There are many variations passages of lorem ipsum availabe,but the Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, labore! Aspernatur, porro voluptatibus. Nobis perspiciatis et ipsam, iusto reprehenderit unde.</p>
+                <button class="website--btn">Learn More</button>
+            </div>
+        </div>
+    </div>
+    <!-- about-us section end -->
 </body>
 
 </html>
