food menu section added

--- a/food_and_resturant_project/index.html
+++ b/food_and_resturant_project/index.html
@@ -59,6 +59,42 @@
         </div>
     </div>
     <!-- about-us section end -->
+    <!-- menu-section start -->
+    <div class="container">
+        <div class="menu">
+            <div class="menu__title website--title">
+                <h4>Food Menu</h4>
+                <h1>Fresh taste and great price</h1>
+            </div>
+            <div class="menu__card">
+                <div class="menu__single">
+                    <img src="assets/img/food1.png" alt="">
+                    <div class="menu__single--container">
+                        <h2>Chicken Burger</h2>
+                        <h4>Toasty Food</h4>
+                        <p>$11.00</p>
+                    </div>
+                </div>
+                <div class="menu__single">
+                    <img src="assets/img/food2.png" alt="">
+                    <div class="menu__single--container">
+                        <h2>Special Beef Burger</h2>
+                        <h4>Toasty Food</h4>
+                        <p>$11.00</p>
+                    </div>
+                </div>
+                <div class="menu__single">
+                    <img src="assets/img/food3.png" alt="">
+                    <div class="menu__single--container">
+                        <h2>Chicken Fry Pack</h2>
+                        <h4>Toasty Food</h4>
+                        <p>$11.00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- menu-section end -->
 </body>
 
 </html>
