service section added

--- a/food_and_resturant_project/index.html
+++ b/food_and_resturant_project/index.html
@@ -95,6 +95,33 @@
         </div>
     </div>
     <!-- menu-section end -->
+    <!-- service-section start -->
+    <div class="container">
+        <div class="service">
+            <div class="service__title website--title">
+                <h4>Services</h4>
+                <h1>We provide best quility food</h1>
+            </div>
+            <div class="service__card">
+                <div class="service__single">
+                    <img src="assets/img/s1.png" alt="">
+                    <h4>Order</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta dolorum voluptates sequi quas molestias quasi et perspiciatis fugiat, ipsa iusto rerum. Enim accusamus error facere voluptate qui? Cum, aperiam odit.</p>
+                </div>
+                <div class="service__single">
+                    <img src="assets/img/s2.png" alt="">
+                    <h4>Shipping</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta dolorum voluptates sequi quas molestias quasi et perspiciatis fugiat, ipsa iusto rerum. Enim accusamus error facere voluptate qui? Cum, aperiam odit.</p>
+                </div>
+                <div class="service__single">
+                    <img src="assets/img/s3.png" alt="">
+                    <h4>Delivered</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta dolorum voluptates sequi quas molestias quasi et perspiciatis fugiat, ipsa iusto rerum. Enim accusamus error facere voluptate qui? Cum, aperiam odit.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- service-section end -->
 </body>
 
 </html>
